chore: I have increased the font size in several different areas of the printedApplicantForm to try to get it to look closer to the original print out

--- a/src/assets/styles/library.scss
+++ b/src/assets/styles/library.scss
@@ -266,3 +266,10 @@ $form-border-color: rgba(153, 102, 153, .5);
     margin-top: 0;
     margin-bottom: 2rem;
 }
+
+@mixin printed_form_paragraph {
+    font-family: arial;
+    font-size: 12px;
+    margin-left: 95px;
+    margin-right: 95px;
+}
