chore: I have added some functionality to the current food bank list to enable the user to see and edit any applicants who have missing information on their application.

--- a/src/assets/styles/displayCurrentFoodBankList.scss
+++ b/src/assets/styles/displayCurrentFoodBankList.scss
@@ -50,6 +50,15 @@
                 text-decoration: none;
             }
 
+            .incomplete_data {
+                color: $orange;
+
+                &:hover {
+                    color: $faded-orange;
+                    cursor: pointer;
+                }
+            }
+
             .not_present_button {
                 @include btn_small;
                 border-radius: 16px;
