chore: I have modified the layout of how the foddbank progres is displayed on the current foodbank list

--- a/src/assets/styles/statisticCard.scss
+++ b/src/assets/styles/statisticCard.scss
@@ -21,6 +21,8 @@
         background-color: $chapel-light-gray;
         padding-top: 1rem;
         padding-bottom: 1rem;
+        color: white;
+        @include paragraph-large;
 
         .statistic_type_header {
             text-align: center;
