--- a/src/assets/styles/currentFoodBankList.scss
+++ b/src/assets/styles/currentFoodBankList.scss
@@ -7,6 +7,24 @@
     overflow: hidden;
     padding-bottom: 6rem;
 
+    #progress_wrapper {
+        width: 100%;
+        border-bottom: solid 1px rgba(0, 0, 0, .3);
+        border-top: solid 1px rgba(0, 0, 0, .3);
+        color: white;
+        text-align: center;
+        padding-top: 12px;
+        padding-bottom: 12px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        
+        p {
+            @include paragraph-large;
+            line-height: 26px;
+        }
+    }
+
     #edit_cancel_button_wrapper {
         @include btn-multiple;
         margin-top: 4rem;
@@ -22,3 +40,4 @@
         }
     }
 }
+ 
