chore: I have finished up the styling for the foodbank progress bar

--- a/src/assets/styles/displayCurrentFoodBankList.scss
+++ b/src/assets/styles/displayCurrentFoodBankList.scss
@@ -11,8 +11,8 @@
     text-align: center;
 
     #list_title {
-        margin-top: 6rem;
-        margin-bottom: 1rem;
+        margin-top: 4rem;
+        margin-bottom: 0;
     }
 
     form {
