--- a/src/assets/styles/currentFoodBankList.scss
+++ b/src/assets/styles/currentFoodBankList.scss
@@ -8,9 +8,10 @@
     padding-bottom: 6rem;
 
     #progress_wrapper {
-        width: 100%;
-        border-bottom: solid 1px rgba(0, 0, 0, .3);
-        border-top: solid 1px rgba(0, 0, 0, .3);
+        width: 480px;
+        max-width: 80%;
+        z-index: 4;
+        box-shadow: 0 2px 10px rgba(90, 90, 90, .6);
         color: white;
         text-align: center;
         padding-top: 12px;
@@ -18,6 +19,9 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
+        border-radius: 16px;
+        margin: auto;
+        margin-top: 2rem;
         
         p {
             @include paragraph-large;
