chore: I have corrected a few styles within the edit delete modules

--- a/src/assets/styles/editDeleteButtons.scss
+++ b/src/assets/styles/editDeleteButtons.scss
@@ -11,3 +11,17 @@
         @include btn-small-danger;
     }
 }
+
+@media (max-width: 767px) {
+    #edit_delete_wrapper {
+       button {
+        width: 100px;
+        min-width: 100px;
+       }
+
+       .delete_button {
+        width: 100px;
+        min-width: 100px;
+       }
+    }
+}
