--- a/src/assets/styles/editModuleCurrentList.scss
+++ b/src/assets/styles/editModuleCurrentList.scss
@@ -53,5 +53,11 @@
         width: 90%;
         padding-left: 1rem;
         padding-right: 1rem;
+
+        #cl_edit_module_addNew {
+            .shadow_form {
+                padding-bottom: 30rem;
+            }
+        }
     }
 }
