--- a/src/assets/styles/App.scss
+++ b/src/assets/styles/App.scss
@@ -6,7 +6,7 @@
   margin: 0;
   padding: 0;
   top: 0;
-  background-color: $chapel-gray;
+  background-image: $background-radial;
 }
 
 #header_wrapper {
