--- a/src/assets/styles/displayCurrentFoodBankList.scss
+++ b/src/assets/styles/displayCurrentFoodBankList.scss
@@ -3,12 +3,34 @@
 #list_wrapper {
     margin: 0;
     padding: 0;
-    background-color: $chapel-gray;
+    background-image: $background-radial;
     color: white;
     height: 100%;
     display: flex;
     flex-direction: column;
     text-align: center;
+
+    #progress_wrapper {
+        width: 480px;
+        max-width: 80%;
+        z-index: 4;
+        box-shadow: 0 4px 12px rgba(0, 0, 0, .4);
+        color: white;
+        text-align: center;
+        padding-top: 12px;
+        padding-bottom: 12px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        border-radius: 16px;
+        margin: auto;
+        margin-top: 2rem;
+        
+        p {
+            @include paragraph-large;
+            line-height: 26px;
+        }
+    }
 
     #list_title {
         margin-top: 4rem;
