--- a/src/assets/styles/library.scss
+++ b/src/assets/styles/library.scss
@@ -9,22 +9,24 @@ $purple: #996699;
 $orange: #FB9400;
 $faded-orange: rgba(251, 148, 0, .6);
 $form-border-color: rgba(153, 102, 153, .5);
+$background-radial: radial-gradient($chapel-light-gray, $chapel-gray);
 
 @mixin header-large-bold {
-    font-family: 'Ubuntu';
-    font-weight: 400;
+    font-family: 'Roboto', serif;
+    font-weight: 500;
     line-height: 1.3;
-    letter-spacing: 0;
+    letter-spacing: 1.5px;
     color: inherit;
     font-style: inherit;
     text-transform: uppercase;
-    background-color: $form-border-color;
+    text-shadow: 1px 5px 7px rgba(0, 0, 0, .2);
+    background-image: linear-gradient(15deg, rgba(153, 102, 153, .7), rgba(153, 102, 153, .6), rgba(153, 102, 153, .7));
 
 }
 
 @mixin header-large {
-    font-family: 'Ubuntu';
-    font-weight: 300;
+    font-family: 'Roboto', serif;
+    font-weight: 400;
     font-size: 36px;
     font-style: normal;
     line-height: 1.55em;
@@ -32,7 +34,7 @@ $form-border-color: rgba(153, 102, 153, .5);
 }
 
 @mixin header-medium {
-    font-family: 'Ubuntu';
+    font-family: 'Roboto', serif;
     font-weight: 300;
     font-size: 24px;
     font-style: normal;
@@ -41,7 +43,7 @@ $form-border-color: rgba(153, 102, 153, .5);
 }
 
 @mixin header-small {
-    font-family: 'Ubuntu';
+    font-family: 'Roboto', serif;
     font-weight: 400;
     font-size: 18px;
     font-style: normal;
@@ -105,7 +107,7 @@ $form-border-color: rgba(153, 102, 153, .5);
 
     &:hover {
         box-shadow: 0 1px 4px $light-gray;
-        background-color: $form-border-color;
+        filter: brightness(90%);
     }
 }
 
@@ -165,7 +167,8 @@ $form-border-color: rgba(153, 102, 153, .5);
     background-color: $chapel-gray;
     justify-content: center;
     border-radius: 16px;
-    box-shadow: 0px 4px 12px $form-border-color;
+    //box-shadow: 0px 4px 12px $form-border-color;
+    box-shadow: 0px 4px 12px rgba(0, 0, 0, .4);
     max-width: 560px;
     margin-top: 6rem;
     margin-bottom: 2rem;
@@ -191,7 +194,7 @@ $form-border-color: rgba(153, 102, 153, .5);
     margin-top: 4rem;
     margin-bottom: 1rem;
     width: 100%;
-    @include paragraph-medium;
+    @include paragraph-large;
 }
 
 @mixin btn-small-danger {
@@ -225,7 +228,7 @@ $form-border-color: rgba(153, 102, 153, .5);
     margin: auto;
     @include paragraph-large;
     border-radius: 4px;
-    box-shadow: 0 4px 12px $form-border-color;
+    box-shadow: 0 4px 18px rgba(0, 0, 0, .4);
 }
 
 @mixin list-table {
