--- a/src/assets/styles/newApplicantPage.scss
+++ b/src/assets/styles/newApplicantPage.scss
@@ -14,6 +14,12 @@
 
     .section_heading {
         @include medium-section-heading;
+        box-shadow: none; 
+        border: none;
+    }
+
+    .section_heading:nth-of-type(1) {
+        margin-top: 0;
     }
 }
 
