--- a/src/assets/styles/fbListSearchBar.scss
+++ b/src/assets/styles/fbListSearchBar.scss
@@ -3,7 +3,7 @@
 #past_list_form {
     @include shadow-form;
     padding-top: 2rem;
-    padding-bottom: 4rem;
+    padding-bottom: 2rem;
 
     label {
         @include medium-section-heading;
@@ -11,7 +11,7 @@
 
     select {
         @include medium-input;
-        margin-top: 1rem;
+        margin-top: 0;
         width: 70%;
     }
 
