--- a/src/assets/styles/library.scss
+++ b/src/assets/styles/library.scss
@@ -10,18 +10,24 @@ $orange: #FB9400;
 $faded-orange: rgba(251, 148, 0, .6);
 $form-border-color: rgba(153, 102, 153, .5);
 $background-radial: radial-gradient($chapel-light-gray, $chapel-gray);
+$purple-linear: linear-gradient(15deg, rgba(153, 102, 153, .7), rgba(153, 102, 153, .6), rgba(153, 102, 153, .7));
 
 @mixin header-large-bold {
-    font-family: 'Roboto', serif;
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
     font-weight: 500;
+    font-size: 14px;
     line-height: 1.3;
     letter-spacing: 1.5px;
     color: inherit;
     font-style: inherit;
-    text-transform: uppercase;
+    text-transform: capitalize;
     text-shadow: 1px 5px 7px rgba(0, 0, 0, .2);
-    background-image: linear-gradient(15deg, rgba(153, 102, 153, .7), rgba(153, 102, 153, .6), rgba(153, 102, 153, .7));
+    background-image: $purple-linear;
 
+}
+
+@mixin header-font-shadow {
+    text-shadow: 1px 5px 7px rgba(0, 0, 0, .2);
 }
 
 @mixin header-large {
@@ -187,10 +193,6 @@ $background-radial: radial-gradient($chapel-light-gray, $chapel-gray);
     padding-top: .5rem;
     padding-bottom: .5rem;
     text-align: center;
-    border-style: solid;
-    border-color: white;
-    border-radius: 14px;
-    border-width: .15rem;
     margin-top: 4rem;
     margin-bottom: 1rem;
     width: 100%;
