--- a/src/assets/styles/alertModule.scss
+++ b/src/assets/styles/alertModule.scss
@@ -14,7 +14,7 @@
     padding: .5rem 2rem;
     box-shadow: 0px 4px 18px rgba(0, 0, 0, .4);
     background: $purple;
-    min-width: 500px;
+    max-width: 200px;
     right: 2rem;
     border-radius: 4px;
     z-index: 11;
