style: fixed style for the submit buttons on the current food bank list

--- a/src/assets/styles/editDisplay.scss
+++ b/src/assets/styles/editDisplay.scss
@@ -41,6 +41,7 @@
     #edit_applicant_wrapper {
         form {
             @include mobile-shadow-form;
+            margin-bottom: 40rem;
         }
 
         .input_pair {
