--- a/src/assets/styles/editModuleCurrentList.scss
+++ b/src/assets/styles/editModuleCurrentList.scss
@@ -79,6 +79,11 @@
         #cl_edit_module_addNew {
             .shadow_form {
                 padding-bottom: 30rem;
+
+            }
+
+            #new_applicant_submit {
+                margin-bottom: 40rem;
             }
 
             #close_form_x {
