--- a/src/assets/styles/displayCurrentFoodBankList.scss
+++ b/src/assets/styles/displayCurrentFoodBankList.scss
@@ -1,5 +1,4 @@
 @import "library.scss";
-
 #list_wrapper {
     margin: 0;
     padding: 0;
@@ -8,12 +7,11 @@
     display: flex;
     flex-direction: column;
     text-align: center;
-
     #progress_wrapper {
         width: 480px;
         max-width: 80%;
         z-index: 4;
-        box-shadow: 0 4px 12px rgba(0, 0, 0, .4);
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
         color: white;
         text-align: center;
         padding-top: 12px;
@@ -24,70 +22,55 @@
         border-radius: 16px;
         margin: auto;
         margin-top: 6rem;
-        
         p {
             @include paragraph-large;
             line-height: 26px;
         }
     }
-
     #list_title {
         margin-top: 4rem;
         margin-bottom: 0;
         @include header-large;
         padding: 0;
     }
-
     h1 {
         margin-top: 0;
         @include header-large;
         padding: 0;
     }
-
     form {
         @include table-container;
-
         table {
             @include list-table;
-
             th {
                 @include list-table-header;
             }
-
             td {
                 @include list-table-data;
             }
-
             tr {
                 @include list-table-row;
             }
-
             #attended {
                 width: auto;
             }
-
             a {
                 color: $chapel-purple;
             }
-
             .remove_button {
                 @include orange-cancel-button;
             }
-
             .call_button {
                 @include btn-small;
                 text-decoration: none;
             }
-
             .incomplete_data {
                 color: $orange;
-
                 &:hover {
                     color: $faded-orange;
                     cursor: pointer;
                 }
             }
-
             .not_present_button {
                 @include btn_small;
                 border-radius: 16px;
@@ -96,12 +79,10 @@
                 width: 75px;
                 @include paragraph-large;
                 background-color: $orange;
-
                 &:hover {
                     background-color: $faded-orange;
                 }
             }
-
             .present_button {
                 @include btn_small;
                 margin-top: 0;
@@ -109,56 +90,44 @@
                 width: 75px;
                 @include paragraph-large;
             }
-
             td:last-of-type {
                 border-right: none;
             }
-
             td:nth-last-child(2) {
                 border-right: none;
             }
-
             th:last-of-type {
                 border-right: none;
             }
-
             tr:last-of-type {
                 border-bottom: none;
             }
-
         }
     }
-
 }
 
 @media (max-width: 1024px) {
-
     #list_wrapper {
         form {
             width: 95%;
             margin: auto;
-
             table {
                 width: 100%;
-
                 th {
                     @include paragraph-small;
                     border: none;
                 }
-
                 td {
                     @include paragraph-small;
                     border: none;
                 }
-
                 .present_button {
                     @include btn_small;
                     margin-top: 0;
                     min-width: 10px;
-                    padding: .15rem .3rem;
+                    padding: 0.15rem 0.3rem;
                     @include paragraph-large;
                 }
-
                 #attended {
                     width: 40px;
                 }
