--- a/src/assets/styles/displayCurrentFoodBankList.scss
+++ b/src/assets/styles/displayCurrentFoodBankList.scss
@@ -7,7 +7,7 @@
     display: flex;
     flex-direction: column;
     text-align: center;
-    #list_title {
+    .list_title {
         margin-top: 4rem;
         margin-bottom: 0;
         @include header-large;
@@ -92,6 +92,7 @@
         form {
             width: 95%;
             margin: auto;
+            margin-top: 4rem;
             table {
                 width: 100%;
                 th {
