--- a/src/assets/styles/displayCurrentFoodBankCheckIn.scss
+++ b/src/assets/styles/displayCurrentFoodBankCheckIn.scss
@@ -21,7 +21,8 @@
     form {
         @include table-container;
         margin-top: 4rem;
-        height: 60vh;
+        height: 100%;
+        max-height: 60vh;
         overflow-y: scroll;
         overflow-x: hidden;
         table {
