feature: added a refresh page button to help the user refresh the page to get the most up to date check in list

--- a/src/assets/styles/displayCurrentFoodBankList.scss
+++ b/src/assets/styles/displayCurrentFoodBankList.scss
@@ -21,6 +21,12 @@
     form {
         @include table-container;
         margin-top: 4rem;
+        .refresh_button {
+            @include btn-small;
+            @include btn-purple;
+            border-radius: 5px;
+            font-size: 16px;
+        }
         table {
             @include list-table;
             th {
@@ -81,6 +87,9 @@
                 border-right: none;
             }
             tr:last-of-type {
+                border-bottom: none;
+            }
+            .no_border {
                 border-bottom: none;
             }
         }
