style: continuing to style the sub-heading

--- a/src/assets/styles/displayCurrentFoodBankCheckIn.scss
+++ b/src/assets/styles/displayCurrentFoodBankCheckIn.scss
@@ -90,9 +90,9 @@
             td:last-of-type {
                 border-right: none;
             }
-            // td:nth-last-child(2) {
-            //     border-right: none;
-            // }
+            .checked_in_data {
+                border-right: none;
+            }
             th:last-of-type {
                 border-right: none;
             }
