--- a/src/assets/styles/attendanceSubHeading.scss
+++ b/src/assets/styles/attendanceSubHeading.scss
@@ -1,23 +1,29 @@
 @import "../styles/library.scss";
 #attendance_sub_heading {
     text-align: center;
-    background-color: $faded-orange;
+    background-color: $orange;
     padding-top: .15rem;
     padding-bottom: .15rem;
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100vw;
+    transition: all .4s ease-in-out;
     p {
         @include paragraph-medium;
         color: white;
         font-size: 16px;
         line-height: 0;
+        text-transform: uppercase;
     }
-    .sticky_heading {
-        position: fixed;
-        bottom: 0;
-        left: 0;
-        width: 100vw;
-    }
+}
+
+.sticky_heading {
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+
+.non_sticky_header {
+    position: relative;
 }
