style: added some text shadow to make the text a bit more readable

--- a/src/assets/styles/attendanceSubHeading.scss
+++ b/src/assets/styles/attendanceSubHeading.scss
@@ -16,6 +16,7 @@
         font-size: 16px;
         line-height: 0;
         text-transform: uppercase;
+        text-shadow: rgba(0, 0, 0, 0.2) 1px 5px 7px;
     }
 }
 
