style: updated the names of the table, removed the incomplete data styling on the check out sheet

--- a/src/assets/styles/displayCurrentFoodBankCheckIn.scss
+++ b/src/assets/styles/displayCurrentFoodBankCheckIn.scss
@@ -41,9 +41,11 @@
             @include list-table;
             th {
                 @include list-table-header;
+                border: none;
             }
             td {
                 @include list-table-data;
+                border: none;
             }
             tr {
                 @include list-table-row;
