--- a/src/assets/styles/displayCurrentFoodBankList.scss
+++ b/src/assets/styles/displayCurrentFoodBankList.scss
@@ -7,20 +7,12 @@
     display: flex;
     flex-direction: column;
     text-align: center;
-    .list_title {
-        margin-top: 4rem;
-        margin-bottom: 0;
-        @include header-large;
-        padding: 0;
-    }
-    h1 {
-        margin-top: 0;
-        @include header-large;
-        padding: 0;
-    }
     form {
         @include table-container;
-        margin-top: 4rem;
+        margin-top: 0;
+        max-height: 60vh;
+        overflow-y: scroll;
+        overflow-x: hidden;
         .refresh_button {
             @include btn-small;
             @include btn-purple;
@@ -103,7 +95,7 @@
         form {
             width: 95%;
             margin: auto;
-            margin-top: 4rem;
+            margin-top: 0;
             table {
                 width: 100%;
                 th {
