--- a/src/assets/styles/statisticCard.scss
+++ b/src/assets/styles/statisticCard.scss
@@ -44,16 +44,17 @@
             margin: 0;
             border-radius: 0;
             justify-content: flex-end;
-            row-gap: 2rem;
+            row-gap: 1rem;
             height: 100px;
             padding: 0;
-            height: 150px;
+            height: 130px;
             width: 150px;
             .card_footer {
                 background-color: $chapel-light-gray;
                 padding-top: .25rem;
                 padding-bottom: .25rem;
                 width: 100%;
+                color: white;
             }
             .statistic_title {
                 @include paragraph-medium;
